fix: admin paneli statik dosya yolları Netlify için düzeltildi

--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Paneli - QR Menü</title>
-    <link rel="stylesheet" href="styles/admin.css">
+    <link rel="stylesheet" href="/frontend/admin/styles/admin.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -175,8 +175,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="scripts/admin-utils.js"></script>
-    <script src="scripts/admin.js"></script>
-    <script src="scripts/admin-realtime.js"></script>
+    <script src="/frontend/admin/scripts/admin-utils.js"></script>
+    <script src="/frontend/admin/scripts/admin.js"></script>
+    <script src="/frontend/admin/scripts/admin-realtime.js"></script>
 </body>
 </html> 
