Admin paneli: Masa ekle, düzenle, sil ve QR kodu üretme özellikleri eklendi

--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -178,5 +178,7 @@
     <script src="/frontend/admin/scripts/admin-utils.js"></script>
     <script src="/frontend/admin/scripts/admin.js"></script>
     <script src="/frontend/admin/scripts/admin-realtime.js"></script>
+    <!-- QRCode.js CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </body>
 </html> 
